@@ -10,9 +10,9 @@
 
 AC_INIT(autogen.sh)
 
-VERSION="1.9.0"
+VERSION="1.9.1"
 LT_RELEASE="1.9"
-LT_VERSION="0:0"
+LT_VERSION="0:1"
 
 AC_CONFIG_AUX_DIR(autoconf)
 AC_CANONICAL_SYSTEM
