@@ -14,6 +14,6 @@ AM_CXXFLAGS = $(UCOMMON_FLAGS)
 
 pkgincludedir = $(includedir)/ucommon
 pkginclude_HEADERS = object.h linked.h string.h counter.h vector.h \
-	bitmap.h timers.h socket.h access.h export.h thread.h mapped.h \
+	bitmap.h timers.h socket.h access.h export.h thread.h mapped.h keydata.h \
 	memory.h platform.h fsys.h xml.h ucommon.h stream.h persist.h shell.h
 
