@@ -91,6 +91,7 @@
 #include <ucommon/memory.h>
 #include <ucommon/mapped.h>
 #include <ucommon/string.h>
+#include <ucommon/keydata.h>
 #include <ucommon/bitmap.h>
 #include <ucommon/socket.h>
 #include <ucommon/thread.h>
